# SDRbot

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  sdrbot.spec  sdrbot_entry.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  enhancement.md  standard.md
.github/workflows/: check-notarization.yml  ci.yml  release.yml
docs/: UPSTREAM_TRACKING.md
hooks/: hook-ssl.py
scripts/: bump_version.sh  check-format.sh  upstream-diff.sh
sdrbot_cli/: __init__.py  __main__.py  agent.py  agent_memory.py  clipboard.py  commands.py  config.py  deep_agent.py  default_agent_prompt.md  execution.py  file_ops.py  image_utils.py  input.py  main.py  memory_tools.py  models_commands.py  non_interactive.py  observability.py  project_utils.py  sessions.py  setup_wizard.py  shell.py  summarization.py  system_prompt.md  token_counting.py  token_utils.py  tools.py  tracing.py  tui_overhaul_plan.md  ui.py  updates.py  version.py
sdrbot_cli/auth/: apollo.py  attio.py  generic_email.py  gmail.py  hubspot.py  hunter.py  lusha.py  oauth_server.py  outlook.py  pipedrive.py  salesforce.py  twenty.py  zohocrm.py
sdrbot_cli/integrations/: runloop.py  sandbox_factory.py
sdrbot_cli/mcp/: __init__.py  client.py  config.py  manager.py  tools.py
sdrbot_cli/services/: __init__.py  commands.py  registry.py
sdrbot_cli/services/apollo/: __init__.py  tools.py
sdrbot_cli/services/attio/: __init__.py  admin_tools.py  sync.py  tools.py
sdrbot_cli/services/generic_email/: __init__.py  tools.py
sdrbot_cli/services/gmail/: __init__.py  tools.py
sdrbot_cli/services/hubspot/: __init__.py  admin_tools.py  sync.py  tools.py
sdrbot_cli/services/hunter/: __init__.py  tools.py
sdrbot_cli/services/lusha/: __init__.py  tools.py
sdrbot_cli/services/mongodb/: __init__.py  tools.py
sdrbot_cli/services/mysql/: __init__.py  tools.py
sdrbot_cli/services/outlook/: __init__.py  tools.py
sdrbot_cli/services/pipedrive/: __init__.py  admin_tools.py  sync.py  tools.py
sdrbot_cli/services/postgres/: __init__.py  tools.py
sdrbot_cli/services/salesforce/: __init__.py  admin_tools.py  sync.py  tools.py
sdrbot_cli/services/tavily/: __init__.py  tools.py
sdrbot_cli/services/twenty/: __init__.py  admin_tools.py  sync.py  tools.py
sdrbot_cli/services/zohocrm/: __init__.py  admin_tools.py  sync.py  tools.py
sdrbot_cli/setup/: __init__.py  env.py  integrations.py  mcp.py  menu.py  models.py  observability.py  services.py  tracing.py  wizard.py
sdrbot_cli/skills/: __init__.py  commands.py  load.py  middleware.py
sdrbot_cli/skills/attio/: tools.py
sdrbot_cli/skills/builtin/: crm-migration.md
sdrbot_cli/skills/hubspot/: tools.py
sdrbot_cli/skills/hunter/: tools.py
sdrbot_cli/skills/lusha/: tools.py
sdrbot_cli/skills/salesforce/: tools.py
sdrbot_cli/subagents/: __init__.py  loader.py  migration_executor.py
sdrbot_cli/tui/: agent_editor_screen.py  agent_worker.py  agents_screen.py  app.py  approval_bar.py  context_screen.py  file_editor_screen.py  help_screen.py  loading_screen.py  mcp_screens.py  messages.py  screens.py  sdrbot.css  services_screens.py  sessions_screen.py  setup_common.tcss  setup_screens.py  setup_wizard_screen.py  skills_screen.py  tools_screen.py  tracing_screens.py  update_screen.py  widgets.py
tests/: __init__.py  conftest.py  test_clipboard.py  test_config.py  test_connection_testers.py  test_file_ops.py  test_image_utils.py  test_non_interactive.py  test_provider_detection.py  test_sessions.py  test_shell_allowlist.py  test_subagent_loader.py  test_system_prompt.py  test_token_extraction.py  test_updates.py  test_version.py
tests/services/: test_registry.py  test_tool_loading.py
tests/services/apollo/: __init__.py  test_tools.py
tests/services/attio/: __init__.py  test_attio_tools.py  test_tools.py
tests/services/generic_email/: __init__.py  test_tools.py
tests/services/gmail/: test_tools.py
tests/services/hubspot/: __init__.py  mock_generated_tools.py  test_associations.py  test_crud_operations.py  test_tool_loading.py  test_tools.py
tests/services/hunter/: __init__.py  test_hunter_tools.py  test_tools.py
tests/services/lusha/: __init__.py  test_lusha_tools.py  test_tools.py
tests/services/mongodb/: test_tools.py
tests/services/mysql/: test_tools.py
tests/services/outlook/: __init__.py  test_tools.py
tests/services/pipedrive/: __init__.py  test_tools.py
tests/services/postgres/: test_tools.py
tests/services/salesforce/: __init__.py  test_salesforce_tools.py  test_tools.py
tests/services/twenty/: __init__.py  test_sync.py  test_tools.py
tests/services/zohocrm/: __init__.py  test_tools.py
